crates/ditto-checker/tests/golden/type-errors/match_unification_error_5.ditto
module Test exports (..)

type Maybe(a) = Just(a) | Nothing

nah = fn (maybe_foo : Maybe(Int)): Int -> 
  match maybe_foo with
  | Just(n) -> unit
  | Nothing -> unit
  end
